feat: auditing funtionality added