@@ -1,9 +1,10 @@
-package com.example.bookstore.mapper;
+package com.example.bookstore.mapper.impl;
 
 import com.example.bookstore.dto.BookResponseDto;
 import com.example.bookstore.dto.LibraryCreateRequestDto;
 import com.example.bookstore.dto.LibraryResponseDto;
 import com.example.bookstore.entity.Library;
+import com.example.bookstore.mapper.LibraryMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
@@ -11,9 +12,10 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
-public class LibraryMapper {
+public class LibraryMapperImpl implements LibraryMapper {
+    @Override
     public LibraryResponseDto fromLibraryToLibraryResponseDto(Library library) {
-        List<BookResponseDto> bookResponseDtos = library.getBooks().stream()
+        List<BookResponseDto> bookResponseDtoList = library.getBooks().stream()
                 .map(book -> BookResponseDto
                         .builder()
                         .id(book.getId())
@@ -24,23 +26,25 @@ public class LibraryMapper {
                         .binding(book.getBinding())
                         .bookStatus(book.getBookStatus())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         return LibraryResponseDto
                 .builder()
                 .id(library.getId())
                 .title(library.getTitle())
                 .address(library.getAddress())
-                .books(bookResponseDtos)
+                .books(bookResponseDtoList)
                 .build();
     }
 
+    @Override
     public List<LibraryResponseDto> fromLibraryToLibraryResponseDto(List<Library> libraries) {
         return libraries.stream()
                 .map(this::fromLibraryToLibraryResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Override
     public Library fromLibraryCreateRequestDtoToLibrary(LibraryCreateRequestDto libraryDto) {
         return Library
                 .builder()
